fix index links

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
 
             <div class="items-body">
                 <div class="items-body-content">
-                    <a href="/prototipo1">Protótipo 1</a>
+                    <a href="./prototipo1">Protótipo 1</a>
                     <i class="fa fa-angle-right"></i>
                 </div>
                 <div class="items-body-content">
-                    <a href="/prototipo2">Protótipo 2</a>
+                    <a href="./prototipo2">Protótipo 2</a>
                     <i class="fa fa-angle-right"></i>
                 </div>
                 <div class="items-body-content">
-                    <a href="/prototipo3">Protótipo 3</a>
+                    <a href="./prototipo3">Protótipo 3</a>
                     <i class="fa fa-angle-right"></i>
                 </div>
                 <div class="items-body-content">
