Adiciona link para demo do protótipo 4

--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
                     <i class="fa fa-angle-right"></i>
                 </div>
                 <div class="items-body-content">
-                    <a href="https://github.com/rafaelpaixao/psd-to-web/tree/master/prototipo4">Protótipo 4</a>
+                    <a href="https://github.com/rafaelpaixao/psd-to-web/tree/master/prototipo4">Protótipo 4 (código)</a>
+                    <i class="fa fa-angle-right"></i>
+                </div>
+                <div class="items-body-content">
+                    <a href="https://psdtoweb.herokuapp.com">Protótipo 4 (demo)</a>
                     <i class="fa fa-angle-right"></i>
                 </div>
             </div>
